--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ id: home
   </div>
   <p>
     <span class="title">SconSolver Website Online</span>
-    This aim of this site is to promote SconSolver and to contain documentation and other useful information.
+    This aim of this site is to promote SconSolver and to contain documentation and other useful information. This site will also be updated with news about features and the development.
     </p>
 </div>
 <!-- End Post -->
