--- a/credits.html
+++ b/credits.html
@@ -6,6 +6,10 @@ id: credits
 
 
 <h1>The People Behind The Scenes</h1>
-TODO
+
+Kjell Winblad
+
+Your name will be here if you contribute to SconSolver!
+
 
 
