--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ id: home
 
 <p class="text-content">
   SconSolver is a constraint solver written in Scala. It is still under havey development but can be used to solve some simple problems. It is fun and easy to add new constraints and features to the solver. The classical send-more-money problem:
-<pre class="brush: Scala;">
+<pre class="brush: scala;">
 val sendMoreMoneyCSP = new BasicCSPModel {
   //Vars
   val vars = List.fill(8)(newIntVar(0 to 9))
