--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@ id: home
 ---
 
 
-<h1>Welcome to <span class="dark">SconSolver</span></h1>
+<h1>About <span class="dark">SconSolver</span></h1>
 
 <p class="text-content">
-  SconSolver is a constraint solver written in Scala. It is still under havey development but can be used to solve some simple problems. The classical send-more-money problem implemented with SconSolver:
+  SconSolver is a constraint solver written in Scala. It is still under havey development but can be used to solve some simple problems. 
+  </p>
+  <h1>Example</h1>
+  <p class="text-content">
+  The classical send-more-money problem implemented with SconSolver:
 <pre class="brush: scala;">
 val sendMoreMoneyCSP = new BasicCSPModel {
   val vars = List.fill(8)(newIntVar(0 to 9))
