Added info to credits and contribute

--- a/contribute.html
+++ b/contribute.html
@@ -8,5 +8,5 @@ id: contribute
 <h1>Contribute</h1>
 
 <p class="text-content">
-  TODO
+  All contibutions are welcome. Many of the constraints can be implemented in a more effective way and more search methods could be added. The easiest way to add code to the project is to fork it on github, do your changes and create a pull request.
 </p>
