--- a/credits.html
+++ b/credits.html
@@ -7,9 +7,12 @@ id: credits
 
 <h1>The People Behind The Scenes</h1>
 
-Kjell Winblad
-
+<p class="text-content">
 Your name will be here if you contribute to SconSolver!
+</p>
 
+<ul>
+<li><a href="http://winsh.me">Kjell Winblad</a></li>
+</ul>
 
 
