Fixed some small formatting things.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ id: home
 <h1>About <span class="dark">SconSolver</span></h1>
 
 <p class="text-content">
-  SconSolver is a constraint solver written in Scala. It is still under havey development but can be used to solve some simple problems. 
+  SconSolver is a constraint solver for constraint programming written in Scala. It is still under havey development but can be used to solve some simple problems. 
   </p>
   <h1>Example</h1>
   <p class="text-content">
